tests/ui/type-inference/box_has_sigdrop.stderr
error[E0308]: mismatched types
  --> $DIR/box_has_sigdrop.rs:8:5
   |
LL | fn main() {
   |          - expected `()` because of default return type
LL |     let mut state = 0;
LL |     Box::new(move || state)
   |     ^^^^^^^^^^^^^^^^^^^^^^^- help: consider using a semicolon here: `;`
   |     |
   |     expected `()`, found `Box<{closure@box_has_sigdrop.rs:8:14}>`
   |
   = note: expected unit type `()`
                 found struct `Box<{closure@$DIR/box_has_sigdrop.rs:8:14: 8:21}>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
